# lwa_x

./: .gitmodules  INSTALL  install_hera.sh  print-nic-stats.sh  tweak-perf-sn.sh  tweak-perf.sh
scripts/: catcher_down.sh  catcher_up.py  tweak-perf-sn.sh
src/: Makefile.am  bda_config.txt  catcher.py  catcher_init.sh  catcher_up.sh  configure.ac  gen_fake_corr_output.py  hera_bda_output_thread.c  hera_catcher_autocorr_thread.c  hera_catcher_disk_thread.c  hera_catcher_disk_thread_bda.c  hera_catcher_disk_thread_v2.c  hera_catcher_net_thread.c  hera_catcher_net_thread_bda.c  hera_catcher_net_thread_bda_v2.c  hera_cmd_handler.py  hera_ctl.py  hera_fake_gpu_thread.c  hera_gpu_bda_thread.c  hera_gpu_output_thread.c  hera_hdf5.h  hera_ibv_thread.c  hera_make_hdf5_template.py  hera_null_thread.c  hera_pktsock_thread.c  hera_write_hdf5.c  lwa_databuf.h  lwa_ibv_thread.c  lzf_filter.h  make_hera_hdf5_template.py  paper_crc_init.sh  paper_crc_thread.c  paper_ctl.py  paper_ctl.sh  paper_databuf.c  paper_databuf.h  paper_fake_net_thread.c  paper_fluff.c  paper_fluff.h  paper_fluff_test.c  (+10 more)
src/bdaconfig/: test_bda_16ants_nobda.txt  test_bda_192ants_nobda.txt  test_bda_352ants.txt
src/scripts/: catcher.py  catcher_up.py  check_catcher_capture.py  check_catcher_dump.py  gen_fake_corr_output.py  hera_catcher_down.sh  hera_catcher_init.sh  hera_catcher_stop_data.py  hera_catcher_take_data.py  hera_catcher_test_bda_write_to_redis.py  hera_catcher_test_read_uvh5.py  hera_catcher_test_redis_values.py  hera_catcher_up.py  hera_catcher_up_bda.py  hera_check_catcher_bda.py  hera_cmd_handler.py  hera_create_bda_config.py  hera_ctl.py  hera_fake_bda_output.py  hera_make_hdf5_template.py  hera_make_hdf5_template_bda.py  hera_set_cnethold_trigger.py  paper_init.sh  paper_init_ibv.sh  tweak-perf-sn.sh  tweak-perf.sh  xtor_down.sh  xtor_up.py
src/tests/: check_bda_autocorr_output.py  check_bda_uvh5_files.py  check_fluff_output_databuf.py  check_gpu_output_databuf.py  check_net_output_databuf.py  check_xcorr_ordering_uvh5.py
